--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,3 +29,6 @@ jobs:
         run: |
           cmake -B build -G "Ninja" -DCMAKE_BUILD_TYPE=RelWithDebInfo
           cmake --build build -j16
+      - name: Run Tests
+        working-directory: build
+        run: ctest -j8
