--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,11 @@ add_library(cpkl STATIC ${CPK_SOURCES})
 target_link_libraries(cpkl ${CURL_LIBRARIES} pthread)
 add_executable(cpk main.cpp)
 target_link_libraries(cpk cpkl)
+if(WIN32)
+    install(TARGETS cpk DESTINATION .)
+else()
+    install(TARGETS cpk DESTINATION usr/bin)
+endif()
 
 FILE(GLOB TEST_FILES src/*_test.cpp)
 foreach(TEST_FILE ${TEST_FILES})
