--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,16 @@ else()
     add_definitions(-DCPK_RELEASE)
 endif()
 
+if(WIN32)
+    add_definitions(-DCPK_OS_WIN)
+else()
+    if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+        add_definitions(-DCPK_OS_MACOS)
+    else()
+        add_definitions(-DCPK_OS_LINUX)
+    endif()
+endif()
+
 set(WITH_TESTS True)
 if(WITH_TESTS)
     enable_testing()
