--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "Alexey Kasyanchuk <degitx@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "adm-zip": "^0.5.10",
     "express": "^4.18.1",
     "lodash.template": "^4.5.0",
     "redis": "^4.2.0",
