--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,12 @@
   "license": "MIT",
   "dependencies": {
     "adm-zip": "^0.5.10",
+    "dompurify": "^2.4.3",
     "express": "^4.18.1",
+    "jsdom": "^21.1.0",
     "lodash.template": "^4.5.0",
+    "marked": "^4.2.12",
+    "moment": "^2.29.4",
     "redis": "^4.2.0",
     "tagslog": "^1.1.2"
   }
