--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,8 @@
   "license": "MIT",
   "dependencies": {
     "adm-zip": "^0.5.10",
+    "ajv": "^8.12.0",
+    "ajv-formats": "^2.1.1",
     "dompurify": "^2.4.3",
     "express": "^4.18.1",
     "jsdom": "^21.1.0",
