--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "lodash.template": "^4.5.0",
     "marked": "^4.2.12",
     "moment": "^2.29.4",
+    "openai": "^3.2.1",
     "redis": "^4.2.0",
     "tagslog": "^1.1.2"
   }
